# ls-rs

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
