[package]
repository = "https://github.com/KushalMeghani1644/ls-rs"
readme = "README.md"
name = "ls-rs"
version = "0.1.0"
edition = "2024"
authors = ["KushalMeghani1644 kushalmeghani108@gmail.com"]
description = "A Rust based colorful ls clone."
license = "GPL-3.0-or-later"
[[bin]]
name = "ls-rs"
path = "src/main.rs"
[dependencies]
ansi_term = "0.12.1"
